--- a/9 - Boosting/Boosting.ipynb
+++ b/9 - Boosting/Boosting.ipynb
@@ -151,12 +151,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-11-20T14:27:44.017138Z",
-     "start_time": "2018-11-20T14:27:43.454493Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -197,12 +192,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-11-20T14:28:24.328935Z",
-     "start_time": "2018-11-20T14:28:24.160715Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn import tree\n",
@@ -236,12 +226,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-11-20T14:28:41.006307Z",
-     "start_time": "2018-11-20T14:28:40.731738Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def plot_decision_boundary(t, X, y, fig_size=(7,7)):\n",
@@ -279,12 +264,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-11-20T14:29:59.123548Z",
-     "start_time": "2018-11-20T14:29:58.847068Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def forest_predict(f, weights, X):\n",
@@ -325,6 +305,7 @@
    "source": [
     "Now we can implement an AdaBoost algorithm with trees and visualize its decision boundary.<br>\n",
     "<div class=\"alert alert-warning\">\n",
+    "    \n",
     "**Exercice**:<br>\n",
     "Using the elements introduced above, implement AdaBoost on a forest containing 100 trees, trained on the current dataset.<br>\n",
     "Display how the decision boundary evolves.<br>\n",
@@ -335,12 +316,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-11-20T14:46:07.620794Z",
-     "start_time": "2018-11-20T14:46:04.607304Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# %load solutions/code1.py\n",
@@ -352,7 +328,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-warning\">**Question**:\n",
+    "<div class=\"alert alert-warning\">\n",
+    "    \n",
+    "**Question**:\n",
     "Is there a tendency to overfit?\n",
     "</div>"
    ]
@@ -369,12 +347,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-11-20T14:52:16.465651Z",
-     "start_time": "2018-11-20T14:52:11.537881Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.ensemble import AdaBoostClassifier\n",
@@ -449,12 +422,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-11-20T15:08:40.043979Z",
-     "start_time": "2018-11-20T15:08:39.550828Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.ensemble import GradientBoostingClassifier\n",
@@ -481,12 +449,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-11-20T15:13:45.597906Z",
-     "start_time": "2018-11-20T15:13:40.637619Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from sys import path\n",
@@ -501,12 +464,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-11-20T15:14:15.028909Z",
-     "start_time": "2018-11-20T15:14:02.121211Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "spam_ada = AdaBoostClassifier(tree.DecisionTreeClassifier(criterion='entropy',max_depth=3), n_estimators=100)\n",
@@ -517,12 +475,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-11-20T15:14:29.968222Z",
-     "start_time": "2018-11-20T15:14:23.917493Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "spam_gtb = GradientBoostingClassifier(n_estimators=100)\n",
@@ -533,12 +486,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-11-20T15:14:38.926862Z",
-     "start_time": "2018-11-20T15:14:38.920932Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "Xtrain, ytrain, Xtest, ytest = spam_data.split(2000, feat='wordcount')"
@@ -547,12 +495,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-11-19T10:16:29.302760Z",
-     "start_time": "2018-11-19T10:16:24.805622Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "spam_ada = AdaBoostClassifier(tree.DecisionTreeClassifier(criterion='entropy',max_depth=3), n_estimators=100)\n",
@@ -563,12 +506,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-11-19T10:16:32.496859Z",
-     "start_time": "2018-11-19T10:16:29.304800Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "spam_gtb = GradientBoostingClassifier(n_estimators=100)\n",
@@ -586,12 +524,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-11-19T10:16:39.056493Z",
-     "start_time": "2018-11-19T10:16:38.953877Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn import datasets\n",
@@ -615,12 +548,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-11-19T10:16:39.289517Z",
-     "start_time": "2018-11-19T10:16:39.284368Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.utils import shuffle\n",
@@ -635,12 +563,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-11-19T10:16:40.525110Z",
-     "start_time": "2018-11-19T10:16:39.717495Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print(Xtrain.shape)\n",
@@ -656,12 +579,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-11-19T10:16:46.190569Z",
-     "start_time": "2018-11-19T10:16:43.828344Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "digits_gtb = GradientBoostingClassifier(n_estimators=100)\n",
@@ -697,7 +615,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.9"
   },
   "toc": {
    "base_numbering": 1,
