--- a/11 - Random Forests/Random Forests.ipynb
+++ b/11 - Random Forests/Random Forests.ipynb
@@ -236,14 +236,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-11-27T09:19:11.874120Z",
      "start_time": "2018-11-27T09:19:02.504730Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "data loaded\n"
+     ]
+    }
+   ],
    "source": [
     "from sys import path\n",
     "path.append('../2 - Text data preprocessing')\n",
@@ -257,14 +265,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-11-27T09:19:13.557877Z",
      "start_time": "2018-11-27T09:19:13.543027Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2000, 14279)"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "Xtrain.shape"
    ]
@@ -290,7 +309,12 @@
    "source": [
     "# %load solutions/code1.py\n",
     "### WRITE YOUR CODE HERE\n",
-    "# If you get stuck, uncomment the line above to load a correction in this cell (then you can execute this code).\n"
+    "# If you get stuck, uncomment the line above to load a correction in this cell (then you can execute this code).\n",
+    "\n",
+    "Xtrain, ytrain, Xtest, ytest = spam_data.split(2000, feat=\"wordcount\")\n",
+    "spam_RF = RandomForestClassifier(n_estimators=200, criterion='entropy')\n",
+    "spam_RF.fit(Xtrain,ytrain)\n",
+    "ypredict = spam_RF.predict(Xtest)\n"
    ]
   },
   {
@@ -704,7 +728,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.3"
   },
   "toc": {
    "base_numbering": 1,
