added Simple ANN folder in the NN class

--- a/6 - Artificial Neural Networks/Artificial neural networks.ipynb
+++ b/6 - Artificial Neural Networks/Artificial neural networks.ipynb
@@ -66,7 +66,7 @@
     "Basically, a perceptron is a linear separation rule.\n",
     "Intuitively, it is a machine that weights evidence $x$ and compares it to threshold $b$ in order to make a decision $f(x)$.\n",
     "\n",
-    "Although perpectrons were invented in the 50's and are not really representative of modern artificial neural networks, manipulating them conveys some of the important intuitions about artificial networks, so we will go into a \"back to the future\" mode for the next paragraphs before going any further."
+    "Although perceptrons were invented in the 50's and are not really representative of modern artificial neural networks, manipulating them conveys some of the important intuitions about artificial networks, so we will go into a \"back to the future\" mode for the next paragraphs before going any further."
    ]
   },
   {
@@ -529,7 +529,7 @@
     "The problem with this expression is that it requires the knowledge of $p(x,y)$ for all possible $(x,y)$ pairs. That would mean having an infinite amount of data. We can, however, try to approximate this gradient with a finite data set $\\left\\{\\left(x_i,y_i\\right)\\right\\}_{i\\in [1,N]}$:\n",
     "$$\\nabla_\\theta L(\\theta) \\approx \\sum_{i=1}^N 2 \\left(f_\\theta(x_i) - y_i\\right) \\nabla_\\theta f_\\theta(x_i)$$\n",
     "\n",
-    "This is actually a *noisy estimation of the gradient* (that converges to the true gradient in the limit of infinite sampling). The theory of *stochastic gradient descent* tells us that if $g(\\theta)$ is a noisy estimator of $\\nabla_\\theta L(\\theta)$, then the following sequence $\\theta^k$ converges to a local minimum of $L(\\theta)$:\n",
+    "This is actually a *noisy estimation of the gradient* (that converges to the true gradient in the limit of infinite sampling). The theory of *stochastic gradient descent* tells us that if $g(\\theta)$ is a noisy estimator of $\\nabla_\\theta L(\\theta)$, then the following sequence $\\theta_k$ converges to a local minimum of $L(\\theta)$:\n",
     "$$\\theta_{k+1} = \\theta_k - \\alpha_k g(\\theta_k)$$\n",
     "under the condition that $\\sum \\alpha_k = \\infty$ and $\\sum \\alpha_k^2 < \\infty$ (called the Robbins-Monro conditions).\n",
     "\n",
@@ -757,7 +757,7 @@
     "<li> Output difference $\\Delta = f_\\theta(x) - y$\n",
     "<li> $\\lambda=$ output layer index\n",
     "<li> $\\delta_\\lambda = s_\\lambda$\n",
-    "<li> $w_{\\lambda-1} \\leftarrow w_{\\lambda-1} + \\alpha \\Delta (\\delta_\\lambda \\cdot z_{\\lambda-1}^T)$\n",
+    "<li> $w_{\\lambda-1} \\leftarrow w_{\\lambda-1} - \\alpha \\Delta (\\delta_\\lambda \\cdot z_{\\lambda-1}^T)$\n",
     "<li> $\\lambda\\leftarrow \\lambda -1$\n",
     "<li> While $\\lambda \\neq 0$:\n",
     "    <ol style=\"list-style-type:none\">\n",
@@ -786,7 +786,7 @@
     "\n",
     "- in red, the network's data: w[i] and b[i] store the weights and biases,\n",
     "- in blue, what is computed during the forward pass, y[i] for $w^x$, s[i] for $\\sigma'(x)$, z[i] for neuron activations,\n",
-    "- in gree, what is computed during the backward pass, $\\delta$[i] and the weights and biases updates."
+    "- in green, what is computed during the backward pass, $\\delta$[i] and the weights and biases updates."
    ]
   },
   {
@@ -851,15 +851,6 @@
    "outputs": [],
    "source": [
     "print(*z, sep=\"\\n\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(s)"
    ]
   },
   {
@@ -1074,7 +1065,10 @@
     "- The stochastic gradient descent procedure got stuck in a local minimum of the loss function.\n",
     "- When divergence occured, the (constant) learning rate was not small enough to keep the gradient steps small.\n",
     "\n",
-    "What's your opinion on these phenomena and their possible solutions?"
+    "What's your opinion on these phenomena and their possible solutions?\n",
+    "\n",
+    "**Note.**<br>\n",
+    "You can find this code wrapped-up as a Python class in the \"Simple ANN\" folder."
    ]
   },
   {
