reformatted backprop as a series of exercices + moved ann.py to the appropriate folder

--- a/6 - Artificial Neural Networks/Simple ANN/README
+++ b/6 - Artificial Neural Networks/Simple ANN/README
@@ -1,2 +1,2 @@
 The artificial neural network built during class, as a Python class.
-
+This is an implementation of an MLP with sigmoid neurons, trained with SGD.
