final version of deep learning class for 2019

--- a/7 - Deep Learning/Deep Learning.ipynb
+++ b/7 - Deep Learning/Deep Learning.ipynb
@@ -26,13 +26,14 @@
     "This class supposes a basic knowledge of Artificial Neural Networks, Backpropagation and Stochastic Gradient Descent (as introduced in the previous class). If you want an in-depth refresher on linear algebra specific to deep learning, [these notebooks](https://github.com/hadrienj/deepLearningBook-Notes) are well-done.\n",
     "\n",
     "0. [Preparation](#sec0)\n",
-    "1. [Neural network training with PyTorch](#sec1)\n",
-    "2. [The Fashion-MNIST dataset](#sec2)\n",
-    "2. [Going deeper (first steps in Deep Learning)](#sec3)\n",
-    "3. [Avoiding overfitting](#sec4)\n",
-    "4. [Better optimizers](#sec5)\n",
-    "5. [CNN](#sec6)\n",
-    "6. [Going further](#sec7)"
+    "1. [Dataset: Fashion-MNIST](#sec1)\n",
+    "2. [ANNs in Layers](#sec2)\n",
+    "3. [Backpropagation and training](#sec3)\n",
+    "4. [Activation Functions](#sec4)\n",
+    "5. [Convolutional Neural Networks](#sec5)\n",
+    "6. [Overfitting](#sec6)\n",
+    "7. [Improving Optimization](#sec7)\n",
+    "8. [Neural Architectures](#sec8)\n"
    ]
   },
   {
@@ -83,7 +84,6 @@
    "source": [
     "import torch\n",
     "import torchvision\n",
-    "import ignite\n",
     "import numpy as np\n",
     "%matplotlib inline\n",
     "import matplotlib.pyplot as plt"
@@ -540,8 +540,17 @@
     }
    },
    "source": [
-    "So far, the way we've been using `torch` has been almost equivalent to `numpy`, and we've been calling `detach().numpy()` on `torch` objects to convert them to numpy arrays. We haven't yet taken advantage of the main benefit of `torch`: automatic differentiation. Let's look at that and see how it helps us train our neural network.\n",
-    "\n",
+    "So far, the way we've been using `torch` has been almost equivalent to `numpy`, and we've been calling `detach().numpy()` on `torch` objects to convert them to numpy arrays. We haven't yet taken advantage of the main benefit of `torch`: automatic differentiation. Let's look at that and see how it helps us train our neural network."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "First, a bit of vocabulary. The objects we're working with, neural network weights and biases, are called `tensors`. \n",
     "<img src=\"img/tensor.png\" width=\"50%\">\n",
     "A `tensor` is a generic term for a linear mapping of any linear mapping from one algeabraic object to another. A scalar is a single value, a vector a 1D object of values, a matrix a 2D object, and a tensor is an N-dimension object (scalars, vectors, and matrices are also tensors). In deep learning frameworks, tensors are the core computational object. We store all values in tensors and link them in computational graphs."
@@ -1019,7 +1028,7 @@
      "start_time": "2018-11-07T13:22:34.661690Z"
     },
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "slide"
     }
    },
    "outputs": [],
@@ -1075,7 +1084,23 @@
    },
    "outputs": [],
    "source": [
-    "# %load solutions/ex5.py"
+    "# %load solutions/ex5.py\n",
+    "class ReLUNet(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super(ReLUNet, self).__init__()\n",
+    "        self.fc1 = nn.Linear(784, 120)\n",
+    "        self.fc2 = nn.Linear(120, 10)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        x = x.view(-1, 784)\n",
+    "        x = F.relu(self.fc1(x))\n",
+    "        x = self.fc2(x)\n",
+    "        return x\n",
+    "\n",
+    "net = ReLUNet()\n",
+    "train(net)\n",
+    "y_valid, predictions = get_valid_predictions(net)\n",
+    "print('Accuracy: ', accuracy_score(predictions, y_valid))\n"
    ]
   },
   {
@@ -1132,16 +1157,183 @@
     }
    },
    "source": [
+    "One of the advantages of convolution is translational invariance: a feature can appear in different parts of an image, and the network will still detect it. Here's a simple example:\n",
+    "\n",
+    "<img src=\"img/invariance.png\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "When defining a convolutional layer, we define the number of channels, where a channel is one slice of neurons. Our input image has one channel - the dimensions are 28 by 28 by 1. A color image has three channels, red green and blue. Using convolution, we'll convert our image of 28 by 28 by 1 into a number of different channels, which we call feature maps. The other parameter we define is the size of the kernel - how large is the filter we're passing over the previous layer. \n",
+    "\n",
+    "`torch.nn.Conv2d(in_channels, out_channels, kernel_size, stride=1, padding=0, dilation=1, groups=1, bias=True, padding_mode='zeros')`\n",
+    "\n",
+    "For now we'll ignore the options of stride, padding, dilation, and groups, but I recommend looking at the [documentation](https://pytorch.org/docs/stable/nn.html?highlight=torch%20nn%20conv2d#torch.nn.Conv2d) for more information."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "This creates the difficult question of how large is our convolutional layer, in terms of dimensions? Let's assume a layer with the following:\n",
+    "\n",
+    "+ batch size $N$\n",
+    "+ input layer size $H_{in}$ by $W_{in}$\n",
+    "+ $C_{in}$ input channels\n",
+    "+ $C_{out}$ output channels\n",
+    "+ Kernel size $K$, assuming 2D for now\n",
+    "\n",
+    "That is to say, the previous layer's size is $(N, C_{in}, H_{in}, W_{in})$. For our image input layer, this is $(512, 1, 28, 28)$. We want to calculate the size of the convolutional layer, $(N, C_{out}, H_{out}, W_{out})$. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "This size depends on our kernel size and the other convolutional parameters like stride and padding:\n",
+    "\n",
+    "$$H_{out} = \\left\\lfloor\\frac{H_{in}  + 2 \\times \\text{padding}[0] - \\text{dilation}[0] \\times (K_0 - 1) - 1}{\\text{stride}[0]} + 1\\right\\rfloor$$\n",
+    " \n",
+    "$$W_{out} = \\left\\lfloor\\frac{W_{in}  + 2 \\times \\text{padding}[1] - \\text{dilation}[1]\\times (K_1 - 1) - 1}{\\text{stride}[1]} + 1\\right\\rfloor$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "Assuming the torch defaults of `stride=1, padding=0, dilation=1`, this simplifies to:\n",
+    "\n",
+    "$$H_{out} = \\left\\lfloor H_{in} - K_0 + 1\\right\\rfloor$$\n",
+    " \n",
+    "$$W_{out} = \\left\\lfloor W_{in} - K_1 + 1\\right\\rfloor$$\n",
+    "\n",
+    "Note that this is straight from the torch documentation:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "help(torch.nn.Conv2d)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "We'll use this calculation to make a small network with 8 feature maps and a kernel size of 4 by 4."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "k = (4, 4)\n",
+    "h_in = 28\n",
+    "w_in = 28\n",
+    "c_in = 1\n",
+    "c_out = 8"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "output_size = c_out * (h_in - k[0] + 1) * (w_in - k[1] + 1)\n",
+    "print(output_size)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "class SmallConvNet(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super(SmallConvNet, self).__init__()\n",
+    "        self.conv1 = nn.Conv2d(c_in, c_out, k)\n",
+    "        self.fc1 = nn.Linear(output_size, 128)\n",
+    "        self.fc2 = nn.Linear(128, 10)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        x = self.conv1(x)\n",
+    "        x = F.relu(x)\n",
+    "        x = torch.flatten(x, 1)\n",
+    "        x = self.fc1(x)\n",
+    "        x = F.relu(x)\n",
+    "        x = self.fc2(x)\n",
+    "        output = F.softmax(x, dim=1)\n",
+    "        return output\n",
+    "\n",
+    "net = SmallConvNet()\n",
+    "train(net)\n",
+    "y_valid, predictions = get_valid_predictions(net)\n",
+    "print('Accuracy: ', accuracy_score(predictions, y_valid))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "<div class=\"alert alert-success\">\n",
     "Exercise 6: Using the `torch.nn.Conv2d` and `torch.nn.MaxPool2d` layer functions (or `torch.nn.functional.max_pool2d`), define and test the following network:\n",
     "    \n",
     "- Input layer: images of size $28\\times 28$ with a single channel\n",
-    "- Convolutional layer of 32 feature maps with $3\\times 3$ filters, stride of 1, and ReLU activation functions\n",
+    "- Convolutional layer of 32 feature maps with $3\\times 3$ filters\n",
     "- Max pooling layer by blocks of size $2 \\times 2$\n",
-    "- Convolutional layer of 64 feature maps with $3\\times 3$ filters, stride of 1, and ReLU activation functions\n",
+    "- Convolutional layer of 64 feature maps with $3\\times 3$ filters\n",
     "- Max pooling layer by blocks of size $2 \\times 2$\n",
     "- Fully connected layer with 128 ReLU neurons\n",
-    "- Fully connected output layer with 10 softmax neurons\n",
+    "- Fully connected output layer with 10 ReLU neurons\n",
     "</div>"
    ]
   },
@@ -1166,7 +1358,7 @@
     }
    },
    "source": [
-    "# Overfitting"
+    "# <a id=\"sec6\">6. Overfitting</a>"
    ]
   },
   {
@@ -1461,7 +1653,7 @@
     }
    },
    "source": [
-    "# Improving Optimization"
+    "# <a id=\"sec7\">7. Improving Optimization</a>"
    ]
   },
   {
@@ -1516,7 +1708,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "slide"
     }
    },
    "source": [
@@ -1572,7 +1764,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "slide"
     }
    },
    "source": [
@@ -1613,7 +1805,12 @@
     }
    },
    "source": [
-    "In this notebook, our training code has gotten very long. Thankfully, `torch` comes with a high-level library [`ignite`](https://pytorch.org/ignite/) which allows us to easily train and including things like EarlyStopping and logging. That's out of the scope of the material for today, but please look at [this notebook](https://github.com/pytorch/ignite/blob/master/examples/notebooks/FashionMNIST.ipynb) before next class."
+    "In this notebook, our training code has gotten very long. Thankfully, `torch` comes with a high-level library [`ignite`](https://pytorch.org/ignite/) which allows us to easily train and including things like EarlyStopping and logging. That's out of the scope of the material for today, but please look at [this notebook](https://github.com/pytorch/ignite/blob/master/examples/notebooks/FashionMNIST.ipynb) before next class.\n",
+    "\n",
+    "Some other libraries like `ignite`:\n",
+    "+ https://docs.fast.ai/\n",
+    "+ https://github.com/skorch-dev/skorch\n",
+    "+ https://github.com/williamFalcon/pytorch-lightning"
    ]
   },
   {
@@ -1624,7 +1821,7 @@
     }
    },
    "source": [
-    "# Neural Architectures"
+    "# <a id=\"sec8\">8. Neural Architectures</a>"
    ]
   },
   {
