--- a/12 - Natural Language Processing/3. Natural Language Generation.ipynb
+++ b/12 - Natural Language Processing/3. Natural Language Generation.ipynb
@@ -390,7 +390,7 @@
     "          epochs=5,\n",
     "          validation_split=0.2)\n",
     "# Save model\n",
-    "model.save('nlg_models/encode_decode_model')"
+    "model.save('nlg_encode_decode_model')"
    ]
   },
   {
