Adding a final exercise in SVM BE about multi-label

--- a/3 - SVMs, bias-variance, and kernels/SVM - BE.ipynb
+++ b/3 - SVMs, bias-variance, and kernels/SVM - BE.ipynb
@@ -35,6 +35,7 @@
     "8. [Examples](#sec8)\n",
     "    1. [Spam or ham?](#sec8-1)\n",
     "    2. [NIST](#sec8-2)\n",
+    "7. [Multi-Label Classification](#sec9)\n",
     "\n",
     "<div class=\"alert alert-success\"><b>In a nutshell:</b>\n",
     "<ul>\n",
@@ -373,8 +374,15 @@
    "source": [
     "<div class=\"alert alert-warning\">\n",
     "    \n",
-    "**Question:**<br>Does it look like these data are linearly separable?</div>\n",
-    "<br>\n",
+    "**Question:**<br>Does it look like these data are linearly separable?\n",
+    "    </div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
     "Some well-experienced engineer already knows that $U$ is no good criterion to split the data points into two categories with a single threshold (recall: in dimension 1, a hyperplane is a threshold). He also knows that other indicators like $V = (U-2)^2$ are not any better, but that the pair $(U,V)$ actually allows to build a separating line between points."
    ]
   },
@@ -1006,15 +1014,98 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "nbpresent": {
      "id": "f04d09ee-0e3c-4a24-b3ce-345323c1ce23"
     }
    },
+   "source": [
+    "# 9. <a id=\"sec9\"></a> Application: Multi-label Classification (MLC)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We'll see an application which is both harder and less common than binary classification, that of **multi-label classification** (MLC).  \n",
+    "Given a list of possible labels, the problem consists in finding one **or more** labels associated to a data point.  \n",
+    "For instance, imagine extracting the keywords from a newspaper article. Possibly many labels can be associated to a text; or for example classifing the elements composing an image\n",
+    "\n",
+    "Given a set of labels $\\mathcal{L} = \\{l_1, l_2, ..., l_k\\} \\in \\{0,1\\}^k$, we want to map elements of a feature space $\\mathcal{X}$ to a subset of $\\mathcal{L}$:  \n",
+    "\n",
+    "$$h : \\mathcal{X} \\longrightarrow \\mathcal{P}(\\mathcal{L})$$\n",
+    "\n",
+    "The two typical approaches for such problems are known as **Binary Relevance** (BR) and **Label Powerset** (LP).  \n",
+    "\n",
+    " - BR: each label in $\\mathcal{L}$ is a binary classification problem, $h_{i} : \\mathcal{X} \\longrightarrow l_{i}, l_{i} \\in \\{0,1\\}, i = 1, ..., |\\mathcal{L}|$.\n",
+    "\n",
+    " - LP: transforms a problem of MLC into one of multiclass classification, mapping elements $x \\in \\mathcal{X}$ directly to $s \\in \\mathcal{P}(\\mathcal{L})$.  \n",
+    " This method becomes rapidly inapplicable as the number of $s$ grows exponentially.\n",
+    " \n",
+    " Many other variations exist, but for today we'll focus on BR, the most straightforward to implement.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For this exercise, we will use a biology dataset from [Elisseeff and Weston 2001]: this dataset contains micro-array expressions and phylogenetic profiles for 2417 yeast genes. Each gen is annotated with a subset of 14 functional categories (e.g. Metabolism, energy, etc.) of the top level of the functional catalogue.\n",
+    "\n",
+    "<div class=\"alert alert-warning\">**Exercice**<br>\n",
+    "<ul>\n",
+    "\n",
+    "<li> find a suitable package to load the file at `yeast.arff`.  <br>\n",
+    "    Hint: <a href=https://docs.scipy.org/doc/scipy/reference/io.html>scipy.io</a> and _read the doc_.<br>\n",
+    "<li> Store the data in a pandas dataframe.<br>\n",
+    "    Hint: columns of classes will be encoded as 'utf-8', we need integers, look for 'str.decode('utf-8')'\n",
+    "<li> check dataset: you should have 2417 samples $\\times$ 117 columns (103 features + 14 labels)\n",
+    "</ul>\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# %load solutions/code8.py\n",
+    "### WRITE YOUR CODE HERE\n",
+    "# If you get stuck, uncomment the line above to load a correction in this cell (then you can execute this code).\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-warning\">**Exercice**<br>\n",
+    "<ul>\n",
+    "<li> Manually, fit a SVM classifier for each label in the dataset\n",
+    "<li> Apply a cross-validation of 60 ∕ 40: 60% of datapoints to train the model, 40% to test it  <br>\n",
+    "   Remember: it is good practice to **randomly shuffle** the data, in case the data are ordered w.r.t. some data-dependent criterion.\n",
+    "<li> Report some performance measure\n",
+    "</ul>\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# %load solutions/code9.py\n",
+    "### WRITE YOUR CODE HERE\n",
+    "# If you get stuck, uncomment the line above to load a correction in this cell (then you can execute this code).\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Congratulation**, you reached the end of the BE ! "
+   ]
   }
  ],
  "metadata": {
