Removing off class SVM exercise

--- a/3 - SVMs, bias-variance, and kernels/SVM - BE.ipynb
+++ b/3 - SVMs, bias-variance, and kernels/SVM - BE.ipynb
@@ -462,17 +462,7 @@
     "\n",
     "Other common kernels:\n",
     "- polynomial $K(x,y)=\\left(1+\\langle x, y\\rangle\\right)^d$\n",
-    "- sigmoid $K(x,y) = \\tanh\\left(\\kappa_1 \\langle x, y\\rangle + \\kappa_2\\right)$\n",
-    "\n",
-    "<div class=\"alert alert-warning\">\n",
-    "    \n",
-    "**Exercice (off-class):**<br>\n",
-    "Check for yourself that the dual optimization problem for the SVM in the kernel's Hilbert space can be written:\n",
-    "$$\\max\\limits_{\\alpha\\in{\\mathbb{R}^+}^N} L_D(\\alpha) = \\sum\\limits_{i=1}^N \\alpha_i - \\frac{1}{2}\\sum\\limits_{i=1}^N\\sum\\limits_{j=1}^N \\alpha_i \\alpha_j y_i y_j K(x_i,x_j)$$\n",
-    "$$\\text{such that } \\sum\\limits_{i=1}^N \\alpha_i y_i = 0$$\n",
-    "$$\\text{and } 0 \\leq \\alpha_i \\leq C$$\n",
-    "So its resolution only requires the knowledge of $K$.\n",
-    "</div>"
+    "- sigmoid $K(x,y) = \\tanh\\left(\\kappa_1 \\langle x, y\\rangle + \\kappa_2\\right)$\n"
    ]
   },
   {
