Corrected SVM BE

--- a/3 - SVMs, bias-variance, and kernels/SVM - BE.ipynb
+++ b/3 - SVMs, bias-variance, and kernels/SVM - BE.ipynb
@@ -71,6 +71,10 @@
     "import numpy as np\n",
     "%matplotlib inline\n",
     "\n",
+    "from sklearn import datasets\n",
+    "fig_size=(10,10)\n",
+    "from sklearn.utils import shuffle\n",
+    "\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "res = np.loadtxt(\"sep_lin.csv\", delimiter=',')\n",
@@ -98,7 +102,7 @@
    "outputs": [],
    "source": [
     "from sklearn import svm\n",
-    "mySVC = svm.SVC(kernel='linear', C=1)\n",
+    "mySVC = svm.SVC(kernel='linear', C=0.1)\n",
     "mySVC.fit(X,y)\n",
     "\n",
     "# Compute margin and find support vectors\n",
@@ -656,6 +660,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mySVM = svm.SVC(kernel='rbf')\n",
+    "mySVM.fit(Xtrain, ytrain)\n",
+    "#plotting\n",
+    "plot_SVC(mySVM)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "nbpresent": {
      "id": "9e414752-9438-46d7-b036-e2af3e670979"
@@ -665,8 +681,7 @@
    "source": [
     "# %load solutions/code5.py\n",
     "### WRITE YOUR CODE HERE\n",
-    "# If you get stuck, uncomment the line above to load a correction in this cell (then you can execute this code).\n",
-    "\n"
+    "# If you get stuck, uncomment the line above to load a correction in this cell (then you can execute this code).\n"
    ]
   },
   {
