Correction on xgboost BE, added solution in separate folder

--- a/Practice/XGBoostTutorial/01 - Introduction to XGBoost.ipynb
+++ b/Practice/XGBoostTutorial/01 - Introduction to XGBoost.ipynb
@@ -57,7 +57,7 @@
     "## Installing XGBoost\n",
     "\n",
     "With Anaconda use :\n",
-    "```conda install -c anaconda py-xgboost=0.60```\n",
+    "```conda install -c anaconda py-xgboost```\n",
     "\n",
     "With pip use :\n",
     "```pip install xgboost```\n"
@@ -347,7 +347,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sns.lmplot(x='ra', y='dec', data=sdss_df, hue='class', fit_reg=False, palette='coolwarm', size=6, aspect=2)\n",
+    "sns.lmplot(x='ra', y='dec', data=sdss_df, hue='class', fit_reg=False, palette='coolwarm', height=6, aspect=2)\n",
     "plt.title('Equatorial coordinates')"
    ]
   },
@@ -377,7 +377,7 @@
     "\n",
     "# update dataframe \n",
     "sdss_df_fe = pd.concat((sdss_df_fe, pd.DataFrame(ugriz)), axis=1)\n",
-    "sdss_df_fe.rename_axis({0: 'PCA_1', 1: 'PCA_2', 2: 'PCA_3'}, axis=1, inplace = True)\n",
+    "sdss_df_fe.rename({0: 'PCA_1', 1: 'PCA_2', 2: 'PCA_3'}, axis=1, inplace = True)\n",
     "sdss_df_fe.drop(['u', 'g', 'r', 'i', 'z'], axis=1, inplace=True)\n",
     "sdss_df_fe.head()"
    ]
@@ -583,7 +583,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.grid_search import GridSearchCV\n",
+    "from sklearn.model_selection import GridSearchCV\n",
     "\n",
     "param = {\n",
     "    \"learning_rate\" :0.3,\n",
@@ -601,7 +601,7 @@
     "gsearch1 = GridSearchCV(estimator = XGBClassifier(param), param_grid = param_test1, cv=10)\n",
     "\n",
     "gsearch1.fit(X_train, y_train)\n",
-    "gsearch1.grid_scores_, gsearch1.best_params_, gsearch1.best_score_"
+    "gsearch1.cv_results_, gsearch1.best_params_, gsearch1.best_score_"
    ]
   },
   {
