--- a/Practice/XGBoostTutorial/02 - XGBoost and ensemble models.ipynb
+++ b/Practice/XGBoostTutorial/02 - XGBoost and ensemble models.ipynb
@@ -90,7 +90,9 @@
     "        return self.predict(point)\n",
     "\n",
     "    def errorFunction(self, data,index, t):\n",
-    "        return sum([1.0 for x,y in data if ...]) / len(data)\n",
+    "        left_side = sum([1.0 for x,y in data if ... != y]) / len(data)\n",
+    "        right_side = 1. - left_side\n",
+    "        return min(left_side, right_side)\n",
     "\n",
     "\n",
     "    def makeThreshold(self,x, t,index):\n",
