--- a/Practice/XGBoostTutorial/03 - Regularization.ipynb
+++ b/Practice/XGBoostTutorial/03 - Regularization.ipynb
@@ -25,7 +25,7 @@
     "\n",
     "**Bias** is the mean error between our prediction and the correct value. A high bias means that our model makes large mistakes, even on the training dataset.\n",
     "\n",
-    "**Variance** is the sensitivity of the prediction to small changes in the dataset. A high variance means that the model performs well on the training dataset, mais poorly on the test dataset.\n",
+    "**Variance** is the sensitivity of the prediction to small changes in the dataset. A high variance means that the model performs well on the training dataset, but poorly on the test dataset.\n",
     "\n",
     "Let's summarize that with a figure :\n",
     "\n",
@@ -66,7 +66,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "from xgboost import XGBRegressor\n",
@@ -113,11 +115,11 @@
     "ax.set_xlabel('n_estimators')\n",
     "ax.set_ylim((0, 2))\n",
     "\n",
-    "ax.annotate('... variance', xy=(900, train_list[900]), xycoords='data',\n",
+    "ax.annotate('... bias', xy=(900, train_list[900]), xycoords='data',\n",
     "            xytext=(600, 0.3), textcoords='data',\n",
     "            arrowprops=dict(arrowstyle=\"->\", connectionstyle=\"arc\"),\n",
     "            )\n",
-    "ax.annotate('... biais', xy=(900, test_list[900]), xycoords='data',\n",
+    "ax.annotate('... variance', xy=(900, test_list[900]), xycoords='data',\n",
     "            xytext=(600, 0.4), textcoords='data',\n",
     "            arrowprops=dict(arrowstyle=\"->\", connectionstyle=\"arc\"),\n",
     "            )\n",
